# FraudGuard

./: Dockerfile  Dockerfile.dashboard  README.md  SETUP.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
dashboard/: index.html  nginx.conf  package.json  tailwind.config.js
dashboard/src/: App.tsx
dashboard/src/api/: client.ts
dashboard/src/hooks/: useAlerts.ts  useMetrics.ts  useTransactions.ts
dashboard/src/pages/: Alerts.tsx  Dashboard.tsx  Transactions.tsx  UserProfile.tsx  Users.tsx
dashboard/src/types/: index.ts
docs/: implementation_details.md  problem_statement.md
src/fraud_detection/: __init__.py  config.py  dependencies.py  main.py
src/fraud_detection/api/: router.py
src/fraud_detection/cache/: device_profile.py  pool.py  user_profile.py  velocity.py
src/fraud_detection/db/: engine.py  migrate.py  session.py
src/fraud_detection/middleware/: correlation.py  logging.py  timing.py
tests/: conftest.py  factories.py
tests/e2e/: test_fraud_scenarios.py
tests/integration/: test_health.py  test_transaction_api.py
tests/performance/: locustfile.py
tests/security/: test_input_validation.py  test_sql_injection.py
tests/ui/: playwright.config.ts
tests/unit/: test_decision_engine.py  test_enrichment.py  test_risk_aggregator.py  test_scoring_behavior.py  test_scoring_device.py  test_scoring_geolocation.py  test_scoring_ip.py  test_scoring_merchant.py  test_scoring_pipeline.py  test_scoring_velocity.py
tmp/: slit_logs.jsonl
(+65 files in other folders)
